--- a/dashboard.html
+++ b/dashboard.html
@@ -3,61 +3,75 @@
 <head>
     <meta charset="utf-8" />
     <title>Fuji</title>
-    <style>
-    .arc text {
-        font: 10px sans-serif;
-        text-anchor: middle;
-    }
-    
-    .arc path {
-        stroke: #fff;
-    }
-    </style>
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
     <svg width="960" height="500"></svg>
     <script>
     var svg = d3.select("svg"),
-        width = +svg.attr("width"),
-        height = +svg.attr("height"),
-        radius = Math.min(width, height) / 2,
-        g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+        margin = {top: 20, right: 20, bottom: 30, left: 50},
+        width = svg.attr("width") - margin.left - margin.right,
+        height = svg.attr("height") - margin.top - margin.bottom;
 
-    var color = d3.scaleOrdinal(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+    var parseDate = d3.timeParse("%Y %b %d");
 
-    var pie = d3.pie()
-        .sort(null)
-        .value(function(d) { return d.count; });
+    var x = d3.scaleTime().range([0, width]),
+        y = d3.scaleLinear().range([height, 0]),
+        z = d3.scaleOrdinal(d3.schemeCategory10);
 
-    var path = d3.arc()
-        .outerRadius(radius - 10)
-        .innerRadius(0);
+    var stack = d3.stack();
 
-    var label = d3.arc()
-        .outerRadius(radius - 40)
-        .innerRadius(radius - 40);
+    var area = d3.area()
+        .x(function(d, i) { return x(d.data.date); })
+        .y0(function(d) { return y(d[0]); })
+        .y1(function(d) { return y(d[1]); });
 
-    d3.csv("data", function(d) {
-      d.count = +d.count;
-      return d;
-    }, function(error, data) {
+    var g = svg.append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    d3.csv("data", type, function(error, data) {
       if (error) throw error;
 
-      var arc = g.selectAll(".arc")
-        .data(pie(data))
-        .enter().append("g")
-          .attr("class", "arc");
+      var keys = data.columns.slice(1);
 
-      arc.append("path")
-          .attr("d", path)
-          .attr("fill", function(d) { return color(d.data.page); });
+      x.domain(d3.extent(data, function(d) { return d.date; }));
+      z.domain(keys);
+      stack.keys(keys);
 
-      arc.append("text")
-          .attr("transform", function(d) { return "translate(" + label.centroid(d) + ")"; })
-          .attr("dy", "0.35em")
-          .text(function(d) { return d.data.page; });
+      var layer = g.selectAll(".layer")
+          .data(stack(data))
+          .enter().append("g")
+          .attr("class", "layer");
+
+      layer.append("path")
+          .attr("class", "area")
+          .style("fill", function(d) { return z(d.key); })
+          .attr("d", area);
+
+      layer.filter(function(d) { return d[d.length - 1][1] - d[d.length - 1][0] > 0.01; })
+        .append("text")
+          .attr("x", width - 6)
+          .attr("y", function(d) { return y((d[d.length - 1][0] + d[d.length - 1][1]) / 2); })
+          .attr("dy", ".35em")
+          .style("font", "10px sans-serif")
+          .style("text-anchor", "end")
+          .text(function(d) { return d.key; });
+
+      g.append("g")
+          .attr("class", "axis axis--x")
+          .attr("transform", "translate(0," + height + ")")
+          .call(d3.axisBottom(x));
+
+      g.append("g")
+          .attr("class", "axis axis--y")
+          .call(d3.axisLeft(y).ticks(10, "%"));
     });
-    </script>
+
+    function type(d, i, columns) {
+        d.date = parseDate(d.date);
+        for (var i = 1, n = columns.length; i < n; ++i) d[columns[i]] = d[columns[i]] / 100;
+        return d;
+    }
+</script>
 </body>
 </html>
