Styled stacked area charts and added a label to the x-axis

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,11 +18,11 @@
             <h2>Content Views</h2>
             <svg width="432" height="250"></svg>
         </div>
-        <div class="metric left">
+        <div class="metric left bottom">
             <h2>Content Views</h2>
             <svg width="432" height="250"></svg>
         </div>
-        <div class="metric right">
+        <div class="metric right bottom">
             <h2>Content Views</h2>
             <svg width="432" height="250"></svg>
         </div>
