Created frontend components for a session duration graph

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -19,6 +19,10 @@
             <h2>Monthly Active Users</h2>
             <svg id="mau" width="432" height="250"></svg>
         </div>
+        <div class="metric left">
+            <h2>Session Duration</h2>
+            <svg id="session-duration" width="432" height="250"></svg>
+        </div>
     </div>
     <script src="dashboard.js"></script>
 </body>
