Added daily active users graph

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,7 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600" rel="stylesheet" />
     <link href="dashboard.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://raw.githubusercontent.com/Caged/d3-tip/master/index.js"></script>
 </head>
 <body>
     <div id="container">
@@ -22,6 +21,10 @@
         <div class="metric left">
             <h2>Session Duration</h2>
             <svg id="session-duration" width="432" height="250"></svg>
+        </div>
+        <div class="metric right">
+            <h2>Daily Active Users</h2>
+            <svg id="dau" width="432" height="250"></svg>
         </div>
     </div>
     <script src="dashboard.js"></script>
