Added chart of users who have reduced transparency enabled

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -26,6 +26,10 @@
             <h2>Daily Active Users</h2>
             <svg id="dau" width="432" height="250"></svg>
         </div>
+        <div class="metric left">
+            <h2>Reduced Transparency</h2>
+            <svg id="reduce-transparency" width="432" height="250"></svg>
+        </div>
     </div>
     <script src="dashboard.js"></script>
 </body>
