--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -27,6 +27,18 @@
             <svg id="dau" width="432" height="250"></svg>
         </div>
         <div class="metric left">
+            <h2>Voiceover</h2>
+            <svg id="voiceover" width="432" height="250"></svg>
+        </div>
+        <div class="metric right">
+            <h2>Bolded Text</h2>
+            <svg id="bold-text" width="432" height="250"></svg>
+        </div>
+        <div class="metric left">
+            <h2>Reduced Motion</h2>
+            <svg id="reduce-motion" width="432" height="250"></svg>
+        </div>
+        <div class="metric right">
             <h2>Reduced Transparency</h2>
             <svg id="reduce-transparency" width="432" height="250"></svg>
         </div>
